--- a/ServiceProvider/ServiceProvider.csproj
+++ b/ServiceProvider/ServiceProvider.csproj
@@ -5,6 +5,13 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Services\**" />
+    <Content Remove="Services\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <None Remove="Services\**" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
@@ -14,11 +21,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SSOLibrary\SSOLibrary.csproj" />
-  </ItemGroup>
-
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
